--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
   sqflite_common_ffi: ^2.4.0+2
+  flutter_launcher_icons: ^0.13.1
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -96,3 +98,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_icons:
+  android: true
+  ios: false
+  image_path: assets/icon/icon.png
+  min_sdk_android: 21
+  adaptive_icon_background: "#0B132B"
+  adaptive_icon_foreground: assets/icon/icon.png
